[package]
edition = "2021"
name = "mundia-synth"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-rp = { version = "0.4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb", "binary-info"] }
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-usb = { version = "0.4", features = ["defmt"] }
embassy-usb-logger = "0.4"
cortex-m-rt = "0.7"
static_cell = "2.1"
defmt-rtt = "0.4"
defmt = "0.3"
log = "0.4"

microfft = { version = "0.6", default-features = false, features = ["size-1024"] }
micromath = { version = "2.1" }
fixed = "1.29"

arrayvec = { version = "0.7", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
