[package]
name = "pitch_shift"
version = "2.1.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "pitch-shifting and/or time-stretching audio using the phase vocoder technique"
license = "MIT"
categories = [ "algorithms", "multimedia::audio", "command-line-utilities" ]
repository = "https://github.com/NathanRoyer/pitch_shift"
readme = "README.md"

[[example]]
name = "shift-wav"

[dependencies]
num-complex = { version = "0.4.6", default-features = false, features = ["bytemuck"] }
microfft = { version = "0.6", default-features = false, features = ["size-1024"] }
micromath = { version = "2.1" }
bytemuck = { version = "1.24" }

[dev-dependencies]
hound = "3.4"
pico-args = "0.5.0"
